--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-firestore.js"></script>
 
 
-    <script>
+    <!-- <script>
       let firebaseConfig = {
         apiKey: "AIzaSyADDhJSA_hg7k4G56u0K4WiUvoCK8A1sFA",
         authDomain: "eride-8b0ae.firebaseapp.com",
@@ -62,7 +62,7 @@
         messagingSenderId: "542614516957",
         appId: "1:542614516957:web:0d8f15f2e4d325d49fd734"
       }
-      firebase.initializeApp(firebaseConfig);
+      firebase.initializeApp(firebaseConfig); -->
     </script>
   </body>
 </html>
